# flashcard-guru-remote-addon

./: .gitignore  ANKIWEB.md  CHANGELOG.md  LICENSE  README.md  manifest.json  pyproject.toml
flashcard_guru_remote/: __init__.py  _anki_entry.py  anki_bridge.py  auth.py  config.json  config.md  config.py  dispatcher.py  pairing.py  protocol.py  server.py  state.py  ui_dialog.py
scripts/: build_ankiaddon.sh  vendor_deps.sh
tests/: conftest.py  test_anki_bridge.py  test_auth.py  test_config.py  test_dispatcher.py  test_pairing.py  test_protocol.py  test_server_integration.py
